# WlyMusic

./: .gitignore  AGENTS.md  package-lock.json  package.json
docs/: dev_plan.md  ideas.md  prd.md  ui_layout.md
src/backend/: Cargo.toml
src/backend/src/: main.rs
src/frontend/: electron-builder.json  index.html  package.json  tsconfig.json  vite.config.ts
src/frontend/electron/: electron.d.ts  main.ts  preload.ts
src/frontend/src/: App.tsx  main.tsx
