[package]
name = "wly-music-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia = { version = "0.5", features = ["mp3", "flac", "aac", "wav"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
rodio = "0.19"

[[bin]]
name = "wly-music-backend"
path = "src/main.rs"